Added jobs management in admin panel and simple authentication system

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
     
   %body
     #container
-      = partial "session/login_status"
+      = partial "sessions/login_status"
       = partial "layouts/header"
       = partial "search/searchbox"
       = partial "categories/list"
