--- a/app/views/layouts/_admin_header.html.haml
+++ b/app/views/layouts/_admin_header.html.haml
@@ -1,10 +1,10 @@
 #header
   %h1#logo= link_to AppConfig.site_name, root_path
   - if logged_in?
-    %ul#top
+    %ul#top{:style => 'padding-top:50px'}
       %li= link_to "Pages", "#"
       = bull
-      %li= link_to "Categories", "#"
+      %li= link_to "Categories", admin_categories_path
       = bull
       %li= link_to "Change your password", "#"
       = bull
