Add category validation, made some fixes and add integration tests

--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -19,5 +19,5 @@
       #content
         = yield
      
-    .footer
-    #messagesContainer{:style => 'display:none'}
+    #footer
+    = render :partial => 'layouts/admin_flash_boxes'
