--- a/app/views/admin/categories/_category.html.haml
+++ b/app/views/admin/categories/_category.html.haml
@@ -2,8 +2,8 @@
   .categoryHandle
   .categoryWrapper
     .categoryManagement{:style => 'float:right;width:10%;'}
-      = link_to_remote(image_tag("icon-delete.png", :alt => 'Delete') + " Delete", {:url => admin_category_url(category.id), :confirm => 'Are you sure you want to delete this category?', :method => :delete}, {:class => 'deleteCategory'})
-      = link_to_remote(image_tag("disk.png", :alt => 'Save') + " Save", {:url => admin_category_url(category.id), :method => :put, :with => "'name='+$F('name[#{category.id}]')+'&url='+$F('url[#{category.id}]')"}, {:id => "saveCategory#{category.id}", :class => 'saveCategory', :style => 'display:none;'})
+      = link_to_delete_category(category.id)
+      = link_to_save_category(category.id)
     %label
       %span Name: 
       = text_field_tag "name[#{category.id}]", category.name, :size => 60
