--- a/app/views/admin/categories/index.html.haml
+++ b/app/views/admin/categories/index.html.haml
@@ -3,9 +3,9 @@
 #categoriesContainer
   = partial @categories
 
-= sortable_element "categoriesContainer", :url => saveorder_admin_categories_path, :tag => "div", :complete => visual_effect(:highlight, 'categoriesContainer')
+= sortable_element_categories_container
 
 #overlay{:style => "display: none; top: 145px; left: 157px;height: 72px;"}
   = image_tag("ajax-loader.gif", :alt => "Loading...")
 %p
-  = link_to_remote image_tag("add.png", :alt => 'Add') + " Add new category", :url => admin_categories_path, :method => :post, :loading => "Element.show('overlay')", :complete => "Element.hide('overlay');"
+  = link_to_add_category
