--- a/app/views/admin/jobs/_jobs_table.html.haml
+++ b/app/views/admin/jobs/_jobs_table.html.haml
@@ -16,10 +16,10 @@
 
         %td{:style => 'text-align:left;width:15%'}
           -# activate/deactivate link
-          = link_to_remote(activation_image_tag(job), {:url => admin_job_url(job.id), :method => :put, :loading => "Element.hide('activ_butt_#{job.id}');Element.show('loading_#{job.id}')", :complete => "Element.hide('loading_#{job.id}');Element.show('activ_butt_#{job.id}')"}, {:id => "activ_butt_#{job.id}"})
-          = image_tag("ajax-loader.gif", :alt => "Saving...", :style => 'display:none', :id => "loading_#{job.id}")
+          = link_to_activate_deactivate_job(job)
+          = saving_job_image_tag(job.id)
           -# delete link
-          = link_to_remote(image_tag("icon-delete.png", :alt => 'Delete'), :url => admin_job_url(job.id), :confirm => 'Are you sure you want to delete this post?', :method => :delete)
+          = link_to_delete_job(job.id)
           
 - else
   #no-ads No jobs, yet.
