Extended some admin views and changed integration tests

--- a/app/views/layouts/_admin_header.html.haml
+++ b/app/views/layouts/_admin_header.html.haml
@@ -1,14 +1,7 @@
 #header
   %h1#logo= link_to AppConfig.site_name, root_path
   - if logged_in?
-    %ul#top{:style => 'padding-top:40px'}
-      %li= link_to "Pages", admin_pages_path
-      = bull
-      %li= link_to "Categories", admin_categories_path
-      = bull
-      %li= link_to "Change your password", "#"
-      = bull
-      %li= link_to "Logout", logout_path
+    = navigation_list [{:text => 'Pages', :url => admin_pages_path}, {:text => 'Categories', :url => admin_categories_path}, {:text => "Change your password", :url => "#"}, {:text => "Logout »", :url => logout_path}]
  
 - unless logged_in?
   #categs-nav
