Added companies review

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -32,7 +32,7 @@
       Misc:
       = br
     
-      = link_to "Companies", "#companies"
+      = link_to "Companies", companies_url
       = br
     
       = link_to "Sitemap", "#sitemap"
