--- a/app/views/job_requests/new.html.haml
+++ b/app/views/job_requests/new.html.haml
@@ -5,7 +5,7 @@
 
   - if @job_hunter.errors.size > 0
     .validation-failure
-      = image_tag "exclamation.png", :style => "vertical-align: -3px"
+      = image_tag "exclamation.png"
       There were a few problems. Please correct the fields labeled in <strong>red</strong>.
     = br
   
