--- a/app/views/jobs/parts/_textile_suggestions.html.erb
+++ b/app/views/jobs/parts/_textile_suggestions.html.erb
@@ -2,8 +2,8 @@
   <table>
       <thead>
       <tr class="odd">
-        <th>{$translations.publish.syntax}</th>
-        <th>{$translations.publish.result}</th>
+        <th>Textile syntax</th>
+        <th>Final result</th>
       </tr>
       </thead>
       <tbody>
