--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,8 @@
     
     = title :site => AppConfig.site_name
     = stylesheets
+    
+    -# defined in javascript_helper
     = javascripts
   
     = feed_links
