--- a/app/views/jobs/edit.html.haml
+++ b/app/views/jobs/edit.html.haml
@@ -6,7 +6,7 @@
 
   - unless @job.errors.empty?
     .validation-failure
-      = image_tag "exclamation.png", :style => "vertical-align: -3px"
+      = image_tag "exclamation.png"
       Please revise the form...
   
   - form_for @job, :html => {:id => "publish_form", :class => "job-form"} do |f|
