--- a/app/views/jobs/parts/_apply_form.html.haml
+++ b/app/views/jobs/parts/_apply_form.html.haml
@@ -5,7 +5,7 @@
 
   - if job_applicant.errors.size > 0
     .validation-failure
-      = image_tag "exclamation.png", :style => "vertical-align: -3px"
+      = image_tag "exclamation.png"
       Unfortunately, your application could not be sent. Please check the form for missing information and resubmit. 
     = br
   
