--- a/app/views/jobs/parts/_fields.html.haml
+++ b/app/views/jobs/parts/_fields.html.haml
@@ -18,6 +18,8 @@
         %td.publish-label{:valign => "top"} Title:
         %td
           = f.text_field :title, :size => 50
+          = error_message_for(@job, :title)
+          
           .suggestion e.g. 'PHP Developer', 'UI designer'
     
       -# location field
@@ -29,6 +31,7 @@
           #outside_location{hide_if(@job.outside_location.blank?)}
             where ?
             = f.text_field :outside_location, :size => 50, :maxlength => 140
+            = error_message_for(@job, :outside_location)
             .suggestion
               e.g. 'London, UK'
     
@@ -37,6 +40,7 @@
         %td{:valign => "top"} Description:
         %td
           = f.text_area :description, :size => "80x15"
+          = error_message_for(@job, :description)
           .suggestion
             = link_to "Format text with Textile", "http://www.textism.com/tools/textile/", |
                       :target => "_blank", :onclick => "$j('#textile-suggestions').toggle();return false;" |              
@@ -51,7 +55,8 @@
         %td.publish-label Name:
         %td
           = f.text_field :company, :size => 40
-
+          = error_message_for(@job, :company)
+          
       -# website field
       %tr
         %td{:valign => "top"} Website:
@@ -67,6 +72,7 @@
           %strong (not published)
         %td
           = f.text_field :poster_email
+          = error_message_for(@job, :poster_email)
           .suggestion
             Online applications will be sent to this address.
     
